[gd_scene load_steps=10 format=3 uid="uid://chpr27lm25485"]

[ext_resource type="ArrayMesh" uid="uid://b7nb05oipn7ic" path="res://Resources/Towers/normalTower lvl1/normal_tower_lvl1.obj" id="1_4qhrg"]
[ext_resource type="Texture2D" uid="uid://b1ms4h5mcmjd0" path="res://Resources/Towers/hexagons_medieval.png" id="2_muqog"]
[ext_resource type="Script" path="res://Scripts/normal_tower.gd" id="3_0d14h"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_iyvvs"]
albedo_texture = ExtResource("2_muqog")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rjsrd"]
albedo_texture = ExtResource("2_muqog")

[sub_resource type="BoxShape3D" id="BoxShape3D_ccfuv"]
size = Vector3(1, 0.567505, 1)

[sub_resource type="SphereShape3D" id="SphereShape3D_ke3xq"]
radius = 5.0

[sub_resource type="SphereMesh" id="SphereMesh_26rvo"]
radius = 5.0
height = 0.001

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ksthd"]
transparency = 1
albedo_color = Color(0, 0, 0, 0.537255)

[node name="Normal_tower_lvl1" type="MeshInstance3D"]
mesh = ExtResource("1_4qhrg")
surface_material_override/0 = SubResource("StandardMaterial3D_iyvvs")
surface_material_override/1 = SubResource("StandardMaterial3D_rjsrd")
script = ExtResource("3_0d14h")

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.216248, 0)
shape = SubResource("BoxShape3D_ccfuv")

[node name="MobDetector" type="Area3D" parent="."]

[node name="Range" type="CollisionShape3D" parent="MobDetector"]
shape = SubResource("SphereShape3D_ke3xq")

[node name="MeshInstance3D" type="MeshInstance3D" parent="MobDetector"]
mesh = SubResource("SphereMesh_26rvo")
surface_material_override/0 = SubResource("StandardMaterial3D_ksthd")

[node name="Shooting CD" type="Timer" parent="."]

[node name="Bullets" type="Node" parent="."]

[node name="Aim2" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.60146, 0)
gizmo_extents = 0.7

[connection signal="body_entered" from="MobDetector" to="." method="_on_mob_detector_body_entered"]
[connection signal="body_exited" from="MobDetector" to="." method="_on_mob_detector_body_exited"]
[connection signal="timeout" from="Shooting CD" to="." method="_on_shooting_cd_timeout"]
